--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@babel/runtime": "^7.6.2",
     "babel-loader": "^8.0.6",
     "react-router-dom": "5.0.0",
-    "redbox-react": "1.6.0"
+    "redbox-react": "1.6.0",
+    "react-dropzone": "^10.2.1"
   },
   "devDependencies": {
     "webpack-dev-server": "^2.11.1",
