Added dompurify dependency

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/runtime": "^7.6.2",
     "@rails/webpacker": "3.5",
     "babel-loader": "^8.0.6",
+    "dompurify": "^2.0.8",
     "prop-types": "~15.6.0",
     "react": "~16.8.0",
     "react-animated-weather": "^4.0.0",
