Installed ReactTimeAgo and dependencies, created,

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "~16.8.0",
     "react-dropzone": "^10.2.1",
     "react-router-dom": "5.0.0",
+    "react-time-ago": "^5.0.7",
     "redbox-react": "1.6.0"
   },
   "devDependencies": {
